wasm/fastq_quality_score_min_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_bz5vh0km/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/b5207a025bff5e412fa6e7532868e7c1185ba2a8.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/b5207a025bff5e412fa6e7532868e7c1185ba2a8.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/0bb0d78d283b16e0c05e36bb07d1b64d2c651410.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/0bb0d78d283b16e0c05e36bb07d1b64d2c651410.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/73a52e09aadd896f41df97c2df15e6afa08bb56a.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/73a52e09aadd896f41df97c2df15e6afa08bb56a.json" for subsequent builds)
cache:INFO:  - ok
